update finalisasi sebelum penilaian magang 2024

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                                 <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Kami</a>
                             </li>
                             <li class="group">
-                                <a href="#portfolio" class="text-base text-dark py-2 flex mx-8 group-hover:text-primary">Portfolio</a>
+                                <a href="#portfolio" class="text-base text-dark py-2 flex mx-8 group-hover:text-primary">Portofolio</a>
                             </li>
                             <li class="group">
-                                <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
+                                <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Klien</a>
                             </li>
-                            <li class="group">
+                            <!-- <li class="group">
                                 <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
-                            </li>
+                            </li> -->
                             <li class="group">
-                                <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
+                                <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Hubungi Kami!</a>
                             </li>
                         </ul>
                     </nav>
@@ -58,12 +58,12 @@
                     <h1 class="text-base font-semibold text-primary md:text-xl">Kantor Jasa Penilai Publik
                         <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl md:"> KJPP Irfan dan Rekan Cabang Sidoarjo</span></h1>
                     <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Penilai Publik dan Penilai Pertanahan Tersertifikasi</h2>
-                    <p class="font-medium text-slate-400 mb-10 leading-relaxed">Berpengalaman mengerjakan pekerjaan pengadaan tanah untuk kepentingan umum dan rekonduktoring bersama PT PLN (Persero) serta diawasi oleh Kementrian Keuangan dan Direktorat Jenderal Ketenagalistrikan</p>
+                    <p class="font-medium text-slate-400 mb-10 leading-relaxed">Berpengalaman mengerjakan pekerjaan pengadaan tanah untuk kepentingan umum dan rekonduktoring bersama PT PLN (Persero) serta diawasi secara langsung dan intensif oleh Kementrian Keuangan dan Direktorat Jenderal Pajak</p>
                     <a href="https://wa.me/6281217773719" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease ease-in-out">Hubungi Kami</a>
                 </div>
                 <div class="w-full self-start px-4 lg:w-1/2">
-                    <div class="relative lg:mt-9 lg:right-0">
-                        <img src="/dist/img/logokjppbagus.png" alt="Logo KJPP" class="max-w-full mx-auto">
+                    <div class="lg:mt-9 lg:right-0">
+                        <img src="/dist/img/logokjppbagus.png" alt="Logo KJPP" class="tes max-w-full mx-auto">
                         <!-- Blob Start -->
                         <!-- <span class="absolute -bottom-20 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
@@ -85,11 +85,11 @@
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Perusahaan</h4>
                     <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">KJPP Irfan dan Rekan Cabang Sidoarjo</h2>
-                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quia repellendus ad quidem fugit eum tenetur!</p>
+                    <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Kantor Jasa Penilaian yang didirikan langsung oleh Bapak Nanang Setiawan pada tahun 2017 sebagai perpanjangan tangan cabang dari kantor pusat yang ada di Jakarta</p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
                     <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari Bekerja Sama!</h3>
-                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, eius repudiandae! Ad placeat atque laboriosam iusto!</p>
+                    <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Dengan bervariasinya pengalaman pekerjaan kami, kami dapat menawarkan jasa serta hasil penilaian yang lebih akurat dan terpercaya</p>
                     <div class="flex items-center">
                         <!-- WA -->
                         <a href="https://wa.me/6281217773719" target="blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
@@ -107,9 +107,9 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+                    <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit asperiores vero consectetur veniam enim eveniet ab dolore quae quasi adipisci.</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Berikut adalah contoh pekerjaan yang sudah kami kerjakan dalam jangka waktu setahun terakhir</p>
                 </div>
             </div>
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
+                    <h4 class="font-semibold text-lg text-primary mb-2">Klien</h4>
                     <h2 class="font-bold text-white text-3xl sm:text-4xl lg:text-5xl">Rekanan Kami:</h2>
                 </div>
             </div>
@@ -161,17 +161,17 @@
                     <a href="https://web.pln.co.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
                         <img src="/dist/img/clients/pln.svg" alt="PLN">
                     </a>
-                    <a href="https://www.jakarta.go.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/jakarta.png" alt="Pemprov Jakarta">
-                    </a>
                     <a href="https://bpkad.surabaya.go.id/home" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/pemkotsby.svg" alt="BPKAD Surabaya">
+                        <img src="/dist/img/clients/bpkad.png" alt="BPKAD Surabaya">
+                    </a>
+                    <a href="https://binamarga.surabaya.go.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/dist/img/clients/dsdabm.png" alt="Dinas Sumber Daya Air dan Bina Marga Kota Surabaya">
                     </a>
                     <a href="https://bprdeltaartha.com/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
                         <img src="/dist/img/clients/bprsda.png" alt="BPR Delta Artha Sidoarjo">
                     </a>
-                    <a href="https://tirtakahuripan.co.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/pdambogor.png" alt="PDAM Kabupaten Bogor">
+                    <a href="https://www.bankjatim.co.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="/dist/img/clients/bankjatim.png" alt="Bank Jatim">
                     </a>
                 </div>
             </div>
@@ -271,15 +271,15 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class="mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
-                    <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, fugit.</p>
+                    <h4 class="font-semibold text-lg text-primary mb-2">Kontak</h4>
+                    <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami!</h2>
+                    <p class="font-medium text-md text-secondary md:text-lg">Konsultasikan segala bentuk keperluan penilaian aset Anda dengan Kami</p>
                 </div>
             </div>
             <form>
             <div class="w-full lg:w-2/3 lg:mx-auto">
                 <div class="w-full px-4 mb-8">
-                    <label for="name" class="text-base font-bold text-primary">Nama</label>
+                    <label for="name" class="text-base font-bold text-primary">Nama Perusahaan</label>
                     <input type="text" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                 </div>
                 <div class="w-full px-4 mb-8">
@@ -305,10 +305,10 @@
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-12 text-slate-300 text-medium md:w-1/3">
                     <h2 class="font-bold text-4xl text-white mb-5">KJPP Irfan dan Rekan Cabang Sidoarjo</h2>
-                    <h3 class="font-bold text-2xl mb-2">Hubungi Kami</h3>
+                    <h3 class="font-bold text-2xl mb-2">Konsultasikan ke Kami!</h3>
                     <p>kjppirfan.sby@gmail.com</p>
                     <p>Perum Gading Fajar 2 Blok D12 No.20</p>
-                    <p>Sidoarjo</p>
+                    <p>Sidoarjo, Jawa Timur</p>
                 </div>
                 <div class="w-full px-4 mb-12 md:w-1/3">
                     <h3 class="font-semibold text-xl text-white mb-5">Kategori Pekerjaan</h3>
@@ -344,10 +344,6 @@
             </div>
             <div class="w-full pt-10 border-t border-slate-700">
                 <div class="flex items-center justify-center mb-5">
-                    <!-- WA -->
-                    <a href="https://wa.me/6281217773719" target="blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
-                        <svg role="img" class="fill-current" width="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>WhatsApp</title><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
-                    </a>
                 </div>
                 <p class="font-medium text-sm text-slate-500 text-center">Dibuat oleh Rafie Mirza Ramadhan</p>
             </div>
