--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
-                    <a href="#home" class="block w-20"><img src="/dist/img/logokjppbagus.png" alt=""></a>
+                    <a href="#home" class="block w-20"><img src="./dist/img/logokjppbagus.png" alt=""></a>
                     <!-- <a href="#home" class="font-bold text-lg text-primary block py-6">KJPP Irfan dan Rekan</a> -->
                 </div>
                 <div class="flex items-center px-4">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="w-full self-start px-4 lg:w-1/2">
                     <div class="lg:mt-9 lg:right-0">
-                        <img src="/dist/img/logokjppbagus.png" alt="Logo KJPP" class="tes max-w-full mx-auto">
+                        <img src="./dist/img/logokjppbagus.png" alt="Logo KJPP" class="tes max-w-full mx-auto">
                         <!-- Blob Start -->
                         <!-- <span class="absolute -bottom-20 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
@@ -115,28 +115,28 @@
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portfolio/porto1.JPEG" alt="ujungberung" width="w-full"/>
+                        <img src="./dist/img/portfolio/porto1.JPEG" alt="ujungberung" width="w-full"/>
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">SUTT Ujung Berung Lama - Rancaekek Sunyaragi</h3>
                     <p class="font-medium text-base text-secondary">Pekerjaan penilaian ROW SUTT 150kV Ujung Berung Lama - Tx Rancaekek Sunyaragi di Kabupaten Sumedang & Bandung Provinsi Jawa Barat</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portfolio/porto2.JPEG" alt="banyudono" width="w-full"/>
+                        <img src="./dist/img/portfolio/porto2.JPEG" alt="banyudono" width="w-full"/>
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">SUTT Banyudono - Mojosongo</h3>
                     <p class="font-medium text-base text-secondary">Pekerjaan penilaian ROW SUTT 150kV Banyudono - Mojosongo di Kabupaten Boyolali Provinsi Jawa Tengah</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portfolio/porto3.JPEG" alt="cerme" width="w-full"/>
+                        <img src="./dist/img/portfolio/porto3.JPEG" alt="cerme" width="w-full"/>
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">SUTT Cerme - Lamongan</h3>
                     <p class="font-medium text-base text-secondary">Pekerjaan penilaian ROW SUTT 150kV Cerme - Lamongan di Kabupaten Cerme & Lamongan Provinsi Jawa Timur</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portfolio/porto4.JPEG" alt="babat" width="w-full"/>
+                        <img src="./dist/img/portfolio/porto4.JPEG" alt="babat" width="w-full"/>
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">SUTT Babat/Baureno - Lamongan</h3>
                     <p class="font-medium text-base text-secondary">Pekerjaan penilaian ROW SUTT 150kV Babat/Baureno - Lamongan di Kabupaten Lamongan & Babat Provinsi Jawa Timur</p>
@@ -159,19 +159,19 @@
             <div class="w-full px-4">
                 <div class="flex flex-wrap items-center justify-center">
                     <a href="https://web.pln.co.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/pln.svg" alt="PLN">
+                        <img src="./dist/img/clients/pln.svg" alt="PLN">
                     </a>
                     <a href="https://bpkad.surabaya.go.id/home" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/bpkad.png" alt="BPKAD Surabaya">
+                        <img src="./dist/img/clients/bpkad.png" alt="BPKAD Surabaya">
                     </a>
                     <a href="https://binamarga.surabaya.go.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/dsdabm.png" alt="Dinas Sumber Daya Air dan Bina Marga Kota Surabaya">
+                        <img src="./dist/img/clients/dsdabm.png" alt="Dinas Sumber Daya Air dan Bina Marga Kota Surabaya">
                     </a>
                     <a href="https://bprdeltaartha.com/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/bprsda.png" alt="BPR Delta Artha Sidoarjo">
+                        <img src="./dist/img/clients/bprsda.png" alt="BPR Delta Artha Sidoarjo">
                     </a>
                     <a href="https://www.bankjatim.co.id/" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/bankjatim.png" alt="Bank Jatim">
+                        <img src="./dist/img/clients/bankjatim.png" alt="Bank Jatim">
                     </a>
                 </div>
             </div>
